--- a/meteor/RealTimeSubtitles/RealTimeSubtitles.css
+++ b/meteor/RealTimeSubtitles/RealTimeSubtitles.css
@@ -16,3 +16,46 @@
 .selectedWord{
 	background-color: #FFFF66 ;
 }
+form {
+     display:inline;
+     margin:0px;
+     padding:0px;
+}
+#displaySlide{
+  width: 75%;
+  margin: 0 auto; 
+}
+
+
+/*.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.42;
+  border-radius: 15px;
+}
+*/
+body, html {text-align:center; padding:50px 0;}
+
+/* The CSS */
+/*select {
+    padding:3px;
+    margin: 0;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+    -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+    box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+    background: #f8f8f8;
+    color:#888;
+    border:none;
+    outline:none;
+    display: inline-block;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+    cursor:pointer;
+}*/
