Adding github account and google account

--- a/meteor/RealTimeSubtitles/RealTimeSubtitles.css
+++ b/meteor/RealTimeSubtitles/RealTimeSubtitles.css
@@ -7,8 +7,9 @@
 }
 .login{
    position:absolute;
-   top:0;
-   right:45px;
+   top:0px;
+   left:0px;
+   
 }
 .mouseOnWord{
 	background-color: #FFFF99 ;
