--- a/meteor/RealTimeSubtitles/client/templates/home/home.html
+++ b/meteor/RealTimeSubtitles/client/templates/home/home.html
@@ -1,17 +1,5 @@
-<head>
-  <title>RealTimeSubtitles</title>
-</head>
-
-<body>
-
-	{{> navbar}}
-    
-    <!-- en cours 
-    {{> usertype}}
-    {{> teacher}}
-    {{> student}} -->
-	
- 	<div class="site-wrapper">
+<template name="home">
+<div class="site-wrapper">
       <div class="site-wrapper-inner">
 
         <div class="cover-container">
@@ -31,21 +19,5 @@
 
         </div>
       </div>
-  	</div>
-
-</body>
-
-
-
-
-
-
-
-<template name="usertype">
-	<p>
-    	<button type="button" class="btn btn-lg btn-primary">Teacher</button>
-    </p>
-    <p>
-        <button type="button" class="btn btn-lg btn-primary">Student</button>
-    </p>
-</template>
+ </div>
+ </template>
