problème de rafraichissement des selects à moitier réglé (le bug reste lors de suppressions) 	modifié:         meteor/RealTimeSubtitles/RealTimeSubtitles.css

--- a/meteor/RealTimeSubtitles/client/templates/displaySlide/displaySlide.html
+++ b/meteor/RealTimeSubtitles/client/templates/displaySlide/displaySlide.html
@@ -2,7 +2,7 @@
 	{{#if thereIsSlide}}
 		<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 		{{#each displaySlide}}
-			<div class="displaySlide panel {{displaySlideCss}}">
+			<div class="panel {{displaySlideCss}}">
 				<div class="panel-heading" role="tab" id="headingTwo">
 				    <h4 class="panel-title">
 				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#{{numH}}{{numV}}" aria-expanded="false" aria-controls="collapseTwo">Slide n° {{numH}}.{{numV}}
