--- a/meteor/RealTimeSubtitles/client/templates/displayWord/displayWord.html
+++ b/meteor/RealTimeSubtitles/client/templates/displayWord/displayWord.html
@@ -1,34 +1,44 @@
 <template name="displayWord">
-	
-	{{#if addWordForm var}}
-		{{> addWordOpt}}
-	{{else}}
-		{{reinitialiseAddWordOpt}}
-		{{reinitialiseAddWord}}
 
-		{{>insertWord var=var}}
-
-		{{#if selectOrSpan var}}
- 			<select class="selectpicker" data-width="fit" data-size="5" onclick="Session.set('wordToAddOptSelect', this.var[0]);">
- 				{{#each wordOpt in var}}
- 					<!-- {{> displayOption var=wordOpt}} -->
- 					<option  data-subtext="{{displayScore wordOpt}}" id="{{id wordOpt}}">
- 						{{displayWord wordOpt}}
- 						{{> displayRemove var=wordOpt}}
- 					</option>
- 				{{/each}}
- 				<option> 
-					{{> addWordOptSelect}}
-				</option>
-			</select>
+		{{#if addWordForm var}}
+			{{> addWordOpt}}
 		{{else}}
-			<span class='displayWord {{displayWordCss}}'>{{displayWord var}}</span>
+
+			{{>insertWord var=var}}
+
+			{{#if selectOrSpan var}}
+				<span>
+		 			<select class="selectpicker" data-width="fit" data-size="10">
+		 				<optgroup>
+			 				{{#each wordOpt in var}}
+			 					{{> displayOption wordOpt=wordOpt}}
+			 				{{/each}}
+			 			</optgroup>
+			 			<optgroup>
+			 				<option>
+								<form class="addWordOptSelect">
+									<input type="text" name="addOptSelect" size="8" placeholder="add option">
+								</form>
+							</option>
+						</optgroup>
+					</select>
+				</span>
+			{{else}}
+				<span class='{{displayWordCss}}'>{{displayWord var}}</span>
+			{{/if}}
 		{{/if}}
-	{{/if}}
+
 </template>
 
 
-
+<template name="displayOption">
+	<option  data-subtext="{{displayScore wordOpt}}" id="{{id wordOpt}}">
+		<span>
+		{{displayWord wordOpt}}
+		{{> displayRemove var=wordOpt}}
+		</span>
+	</option>
+</template>
 
 
 <template name="displayRemove">
@@ -37,13 +47,6 @@
 			<span aria-hidden="true">&times;</span>
 		</button>
 	{{/if}}
-</template>
-
-<template name="addWordOptSelect">
-	<form class="addWordOptSelect">
-		<input type="text" name="addOptSelect" size="8" placeholder="add option">
-		<input type="submit" value="Submit">
-	</form>
 </template>
 
 <template name="addWordOpt">
