--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -8,13 +8,13 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">LiveSubtitle</a>
+				<a class="navbar-brand" href="{{pathFor 'home'}}">Live Subtitles</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-				  <li class="active"><a href={{pathFor 'home'}}>Home</a></li>
-				  <li><a href={{pathFor 'about'}}>About</a></li>
-				  <li><a href={{pathFor 'contact'}}>Contact</a></li>
+					<li><a href="{{pathFor 'home'}}">Cours</a></li>
+				  <li><a href="{{pathFor 'about'}}">About</a></li>
+				  <li><a href="{{pathFor 'reveal'}}">Reveal</a></li>
 				  <li><a href="#signin">{{> loginButtons}}</a></li>
 				</ul>
 			  </div><!--/.nav-collapse -->
