--- a/meteor/RealTimeSubtitles/client/templates/about/about.html
+++ b/meteor/RealTimeSubtitles/client/templates/about/about.html
@@ -3,7 +3,7 @@
 	<div id="about">
 	Developpe par David BUI - Maxime LECHEVALLIER - Sara OUNISSI
 	<br>Professeur tuteur : Jerome Maisonnasse
-	<br>Plus d'information sur : <a href="http://air.imag.fr/index.php/LiveSubtitles" target="_blank" style="color:blue"> Live Subtitles</a>
+	<br>Plus d'informations sur : <a href="http://air.imag.fr/index.php/LiveSubtitles" target="_blank" style="color:blue"> Live Subtitles</a>
 	<br> Polytech Grenoble - RICM4 - 2015/2016
 	</div>
 </template>
