--- a/meteor/RealTimeSubtitles/client/templates/home/home.html
+++ b/meteor/RealTimeSubtitles/client/templates/home/home.html
@@ -1,22 +1,23 @@
 <template name="home">
-<div class="site-wrapper">
-      <div class="site-wrapper-inner">
-        <div class="cover-container">
-          <div class="inner cover">
-          	<button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i></button>
-			<h1>Welcome to LiveSubtitle!</h1>
-				{{> addCourseForm}}
-	  			{{> coursesTables}}
-	  			{{> displaySlide}}
-          </div>
-          
-          <div class="mastfoot">
-            <div class="inner">
-              <p>By RICM4</p>
+  <div class="site-wrapper">
+        <div class="site-wrapper-inner">
+          <div class="cover-container">
+            <div class="inner cover">
+            	<button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i></button>
+  			<h1>Welcome to LiveSubtitle!</h1>
+  				{{> addCourseForm}}
+  	  			{{> coursesTables}}
+            {{> APISpeech}}
+  	  			{{> displaySlide}}
             </div>
-          </div>
+            
+            <div class="mastfoot">
+              <div class="inner">
+                <p>By RICM4</p>
+              </div>
+            </div>
 
+          </div>
         </div>
-      </div>
- </div>
+   </div>
  </template>
