--- a/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
+++ b/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
@@ -5,7 +5,7 @@
 					<h2>reveal.js Math Plugin</h2>
 					<p>A thin wrapper for MathJax</p>
 					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+						{{> displayNote}}
 					</aside>
 				</section>
 
@@ -17,6 +17,9 @@
 					\dot{y} &amp; = \rho x - y - xz \\
 					\dot{z} &amp; = -\beta z + xy
 					\end{aligned} \]
+					<aside class="notes">
+						{{> displayNote}}
+					</aside>
 				</section>
 
 				<section>
