--- a/meteor/RealTimeSubtitles/client/templates/reveal/reveal.css
+++ b/meteor/RealTimeSubtitles/client/templates/reveal/reveal.css
@@ -20,6 +20,25 @@
 	border-top-color:blue;
 }
 
+
+.reveal.default.center{
+	width:800px;
+	height:600px;
+	
+}
+
+.reveal.center, .reveal.center .slides, .reveal.center .slides section {
+    max-height: 100%;
+	min-height:100%;
+	max-width:100%;
+	min-height:100%;
+}
+
+.acote{
+	position:absolute;
+	right:0;
+}
+
 /*********************************************
  * SPEAKER NOTES
  *********************************************/
