--- a/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
+++ b/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
@@ -2,7 +2,12 @@
 	<div class="reveal">
 		<div class="slides">
 			{{>yield region='diapo'}}
-			{{>yield region='commentaire_section'}}
+		
 		</div>
 	</div>
+	<div class="acote">
+		{{>yield region='commentaire_section'}}
+		
+		texte brute
+		</div>
 </template>	
