--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -13,9 +13,9 @@
 			  <div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'home'}}">Cours</a></li>
-				  <li><a href="{{pathFor 'about'}}">About</a></li>
-				  <li><a href="{{pathFor 'reveal'}}">Reveal</a></li>
-				  <li><a href="#signin">{{> loginButtons}}</a></li>
+				  	<li><a href="{{pathFor 'about'}}">About</a></li>
+				  	<li><a href="{{pathFor 'reveal'}}">Reveal</a></li>
+				  	<li><a href="{{pathFor 'login'}}">{{> loginButtons}}</a></li>
 				</ul>
 			  </div><!--/.nav-collapse -->
 			</div>
