--- a/meteor/RealTimeSubtitles/client/main.css
+++ b/meteor/RealTimeSubtitles/client/main.css
@@ -201,3 +201,14 @@ button, input, optgroup, select, textarea {
 .real .progress span {
 	background-color:red;
 }
+
+#login-dropdown-list {
+    position: absolute;
+    top: 200px;
+    left: -50px;
+    margin : auto;
+    background: #ffffff;
+    color: #999999;
+    border-radius: 8px;
+    padding: 10px 20px;
+}
