adding home caroussel and responsive CSS

--- a/meteor/RealTimeSubtitles/client/templates/about/about.html
+++ b/meteor/RealTimeSubtitles/client/templates/about/about.html
@@ -1,9 +1,11 @@
 <template name="about">
 <meta charset="UTF-8">
-	<div id="about">
-	Developpe par David BUI - Maxime LECHEVALLIER - Sara OUNISSI
-	<br>Professeur tuteur : Jerome Maisonnasse
-	<br>Plus d'informations sur : <a href="http://air.imag.fr/index.php/LiveSubtitles" target="_blank" style="color:blue"> Live Subtitles</a>
-	<br> Polytech Grenoble - RICM4 - 2015/2016
+	<div id="about" class="text-center">
+		<div class="panel-body text-center">
+			Developpe par David BUI - Maxime LECHEVALLIER - Sara OUNISSI
+			<br>Professeur tuteur : Jerome Maisonnasse
+			<br>Plus d'informations sur : <a href="http://air.imag.fr/index.php/LiveSubtitles" target="_blank" style="color:blue"> Live Subtitles</a>
+			<br> Polytech Grenoble - RICM4 - 2015/2016
+		</div>
 	</div>
 </template>
