--- a/meteor/RealTimeSubtitles/client/main.css
+++ b/meteor/RealTimeSubtitles/client/main.css
@@ -101,35 +101,6 @@ body {
 }
 
 
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the footer */
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .mastfoot,
-  .cover-container {
-    width:100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
-
-@media (min-width: 992px) {
-  .mastfoot,
-  .cover-container {
-    width: 700px;
-  }
-}
-
-
 button, input, optgroup, select, textarea {
   color : black;
 }
@@ -141,9 +112,14 @@ button, input, optgroup, select, textarea {
 	border-style:groove;	
 	border-radius:2px;
 	border-width:12px;
-	width:700px;
+	width:300px;
+  margin-top : 200px;
 	margin-left:auto;
 	margin-right:auto;
+}
+
+.panel-body{
+  text-align:center;
 }
 
 #main{
@@ -185,3 +161,66 @@ button, input, optgroup, select, textarea {
 	margin:30px;
 }
 
+/*
+ * Responsive CSS
+ */
+
+@media (min-width: 768px) {
+  /* Pull out the footer */
+  .mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
+  /* Start the vertical centering */
+  .site-wrapper-inner {
+    vertical-align: middle;
+  }
+  /* Handle the widths */
+  .mastfoot,
+  .cover-container {
+    width:100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+
+  /* Navbar positioning foo */
+  .navbar-wrapper {
+    margin-top: 20px;
+  }
+  .navbar-wrapper .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+  #about{
+  width:700px;
+  margin-left:auto;
+  margin-right:auto;
+  }
+
+  .panel-body{
+  text-align:center;
+  }
+
+}
+
+@media (min-width: 992px) {
+  .mastfoot,
+  .cover-container {
+    width: 700px;
+  }
+}
