--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -8,7 +8,7 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{{pathFor 'home'}}">Live Subtitles</a>
+				<a class="navbar-brand" href="{{pathFor 'accueil'}}">Live Subtitles</a>
 				</div>
 				<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
