--- a/meteor/RealTimeSubtitles/client/templates/about/about.html
+++ b/meteor/RealTimeSubtitles/client/templates/about/about.html
@@ -3,9 +3,9 @@
 	<div id="about" class="text-center">
 		<div class="panel-body text-center">
 			Developpe par David BUI - Maxime LECHEVALLIER - Sara OUNISSI
-			<br>Professeur tuteur : Jerome Maisonnasse
+			<br>Professeur tuteur : <a href="http://fabmstic.imag.fr/" target="_blank" style="color:blue">Jerome Maisonnasse</a>
 			<br>Plus d'informations sur : <a href="http://air.imag.fr/index.php/LiveSubtitles" target="_blank" style="color:blue"> Live Subtitles</a>
-			<br> Polytech Grenoble - RICM4 - 2015/2016
+			<br> <a href="http://www.polytech-grenoble.fr/" target="_blank" style="color:blue"> Polytech Grenoble </a> - <a href="http://www.polytech-grenoble.fr/ricm.html" target="_blank" style="color:blue" >RICM4 </a>- 2015/2016
 		</div>
 	</div>
 </template>
