--- a/meteor/RealTimeSubtitles/client/templates/reveal/reveal.css
+++ b/meteor/RealTimeSubtitles/client/templates/reveal/reveal.css
@@ -34,9 +34,10 @@
 	min-height:100%;
 }
 
-.acote{
+div.acote{
 	position:absolute;
-	right:0;
+	top:100px;
+	right:200px;
 }
 
 /*********************************************
