--- a/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
+++ b/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
@@ -2,12 +2,12 @@
 	<div class="reveal">
 		<div class="slides">
 			{{>yield region='diapo'}}
-		
 		</div>
 	</div>
 	<div class="acote">
 		{{>yield region='commentaire_section'}}
-		
-		texte brute
-		</div>
+	</div>
+	<div class="droite">
+		{{>yield region='com_droite'}}
+	</div>
 </template>	
