--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -14,11 +14,13 @@
 				<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'home'}}">Cours</a></li>
 					{{#if currentUser}}
-						{{#if isTeacher}}
-							<li>{{> APISpeech}}</li>
+						{{#if isJoined}}
+							{{#if isTeacher}}
+								<li>{{> APISpeech}}</li>
+							{{/if}}
+							<li><a href="{{pathFor 'edit'}}">Notes</a></li>
+							<li><a href="{{pathFor 'reveal'}}">Reveal</a></li>
 						{{/if}}
-						<li><a href="{{pathFor 'edit'}}">Notes</a></li>
-						<li><a href="{{pathFor 'reveal'}}">Reveal</a></li>
 					{{/if}}
 					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'login'}}">{{> loginButtons}}</a></li>
