--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -2,7 +2,7 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 			  <div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 				  <span class="sr-only">Toggle navigation</span>
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>
@@ -17,6 +17,7 @@
 						<li>{{> APISpeech}}</li>
 						<li><a href="{{pathFor 'edit'}}">Edit</a></li>
 						<li><a href="{{pathFor 'reveal'}}">Reveal</a></li>
+						<li><a href="{{pathFor 'indev'}}">In Development</a></li>
 					{{/if}}
 					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li><a href="{{pathFor 'login'}}">{{> loginButtons}}</a></li>
