--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -24,7 +24,7 @@
 						{{/if}}
 					{{/if}}
 					<li><a href="{{pathFor 'about'}}">About</a></li>
-					<li><a href="{{pathFor 'login'}}">{{> loginButtons}}</a></li>
+					<li>{{> loginButtons}}</li>
 				</ul>
 			  </div><!--/.nav-collapse -->
 			</div>
