--- a/meteor/RealTimeSubtitles/client/main.css
+++ b/meteor/RealTimeSubtitles/client/main.css
@@ -113,7 +113,7 @@ button, input, optgroup, select, textarea {
 	border-radius:2px;
 	border-width:12px;
 	width:300px;
-  margin-top : 200px;
+	margin-top : 200px;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -223,4 +223,13 @@ button, input, optgroup, select, textarea {
   .cover-container {
     width: 700px;
   }
+}
+
+div.acote{
+	position:absolute;
+	right:10px;
+	top:70px;
+	width:400px;
+	height:530px;
+	border:solid;
 }
