reparation carroussel, désolé Sara

--- a/meteor/RealTimeSubtitles/client/templates/slides/note_fixe.html
+++ b/meteor/RealTimeSubtitles/client/templates/slides/note_fixe.html
@@ -1,10 +1,55 @@
 <template name="note_fixe">
 		commentaire fixe
-</template>
-
-
-<template name="commentaire">
-	<aside class="notes">
-		commentaire
-	</aside>
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		commentaire fixe
+		
 </template>
