Affichage des notes en mode Read/Edit

--- a/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
+++ b/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
@@ -5,7 +5,6 @@
 		</div>
 	</div>
 	<div class="acote">
-		{{>yield region='commentaire_editable'}}
-		{{>yield region='commentaire_fixe'}}
+		{{>yield region='commentaire'}}
 	</div>
 </template>	
