--- a/meteor/RealTimeSubtitles/client/templates/displayNote/displayNote.html
+++ b/meteor/RealTimeSubtitles/client/templates/displayNote/displayNote.html
@@ -1,9 +1,27 @@
 <template name="displayNote">
+	<div class="switch" id="toggle">
+	   <input type="checkbox" data-label-text="Edit" data-switch-get="state">
+	</div>
+	<div>
 	{{#if thereIsSlide}}
 		{{#if thereIsWord}}
 			{{#each wordOptArray in displayNote}}
-			 	{{displayBestWord wordOptArray}}
+				{{#if isEditable}}
+					{{> displayWordNoteSide var=wordOptArray}}
+				{{else}}
+					{{displayBestWord wordOptArray}}
+				{{/if}}
 			{{/each}}
+			{{#if isEditable}}
+				{{>pushWordNoteSide}}
+			{{/if}}
 		{{/if}}
 	{{/if}}
+	</div>
+</template>
+
+<template name="pushWordNoteSide">
+	<form>
+		<input type="text" name="pushWordNoteSide" size="4" placeholder="push">
+	</form>
 </template>
