--- a/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
+++ b/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
@@ -16,10 +16,13 @@
 </template>
 
 <template name="addCourseForm">
+	Select a course to contribute or create a new course
+	<div id="formulaire">
 		{{#if currentUser}}
 			<form>
 				<input type="text" name="courseName" placeholder="Type to add new course">
 				<input type="submit" value="Add Course">
 			</form>
 		{{/if}}
+	</div>
 </template>
