J'essaye d'améliorer l'API Speech

--- a/meteor/RealTimeSubtitles/client/templates/indev/indev.html
+++ b/meteor/RealTimeSubtitles/client/templates/indev/indev.html
@@ -3,6 +3,6 @@
 </template>
 
 <template name="indev">
-	<h1>Welcome to Live Subtitles !</h1>
+	<h1>Upload your Reveal</h1>
 	{{> uploadfiles}}
  </template>
