Coupe la reconnaissance vocale quand on rejoint un cours

--- a/meteor/RealTimeSubtitles/client/templates/displayNote/displayNote.html
+++ b/meteor/RealTimeSubtitles/client/templates/displayNote/displayNote.html
@@ -1,4 +1,7 @@
 <template name="displayNote">
+	{{#if isTeacher}}
+		<div id="status" style="color:gray"></div>
+	{{/if}}
 	<div class="switch" id="toggle">
 	   <input type="checkbox" data-label-text="Edit" data-switch-get="state">
 	</div>
