--- a/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
+++ b/meteor/RealTimeSubtitles/client/templates/reveal/reveal.html
@@ -6,5 +6,6 @@
 	</div>
 	<div class="acote">
 		{{>yield region='commentaire'}}
+		<span id="interim_span" style="color:gray"></span>
 	</div>
 </template>	
