Ajout d'un beau form text au début, meilleur gestion des restrictions elèves/teacher

--- a/meteor/RealTimeSubtitles/client/main.css
+++ b/meteor/RealTimeSubtitles/client/main.css
@@ -29,10 +29,10 @@ form {
   position : absolute;
 }
 .mouseOnWord{
-	background-color: #FFFF99 ;
+  font-weight: bold;
 }
 .selectedWord{
-	background-color: #FFFF66 ;
+  font-weight: 900;
 }
 .panel{
   width: 80%;
