--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -19,7 +19,7 @@
 								<li>{{> APISpeech}}</li>
 							{{/if}}
 							<li><a href="{{pathFor 'edit'}}">Notes</a></li>
-							<li><a href="{{pathFor 'reveal'}}">Reveal</a></li>
+							<li><a href="{{pathFor 'reveal'}}">{{courseName}}</a></li>
 							<li><a href="{{pathFor 'indev'}}">In Development</a></li>
 						{{/if}}
 					{{/if}}
