--- a/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
+++ b/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
@@ -8,7 +8,7 @@
 			{{/if}}
 			{{#if mouseOnJoin}}
 				{{#if currentUser}}
-					<a id="join" class="btn btn-xs btn-primary"> <span class="glyphicon glyphicon-pencil"></span></a>
+					<a href="{{pathFor 'reveal'}}" id="join" class="btn btn-xs btn-primary"> <span class="glyphicon glyphicon-pencil"></span></a>
 				{{/if}}
 			{{/if}}
 		</li>
@@ -19,9 +19,16 @@
 	Select a course to contribute or create a new course
 	<div id="formulaire">
 		{{#if currentUser}}
-			<form>
-				<input type="text" name="courseName" placeholder="Type to add new course">
-				<input type="submit" value="Add Course">
+<!-- 			<form>
+				<input type="text" class="form-control" name="courseName" placeholder="Type to add new course" id="inputSuccess4" aria-describedby="inputSuccess4Status">
+				<input type="submit" class="btn btn-default" value="Add Course">
+			</form> -->
+			<form class="form-inline">
+			  <div class="form-group has-success has-feedback">
+			    <input type="text" class="form-control" id="inputSuccess4" aria-describedby="inputSuccess4Status" placeholder="Type to add new course" name="courseName">
+			    <span class="glyphicon glyphicon-plus form-control-feedback" aria-hidden="true"></span>
+			    <span id="inputSuccess4Status" class="sr-only">(success)</span>
+			  </div>
 			</form>
 		{{/if}}
 	</div>
