--- a/meteor/RealTimeSubtitles/client/templates/about/about.html
+++ b/meteor/RealTimeSubtitles/client/templates/about/about.html
@@ -2,7 +2,7 @@
 <div class="test">
 	<div id="about" class="text-center">
 			<div class="panel-body text-center">
-				Developped by David BUI - Maxime LECHEVALLIER - Sara OUNISSI
+				Developed by David BUI - Maxime LECHEVALLIER - Sara OUNISSI
 				<br>Tutor : <a href="http://fabmstic.imag.fr/" target="_blank" style="color:blue">Jerome Maisonnasse</a>
 				<br>More information on : <a href="http://air.imag.fr/index.php/LiveSubtitles" target="_blank" style="color:blue"> Live Subtitles</a>
 				<br> <a href="http://www.polytech-grenoble.fr/" target="_blank" style="color:blue"> Polytech Grenoble </a> - <a href="http://www.polytech-grenoble.fr/ricm.html" target="_blank" style="color:blue" >RICM4 </a>- 2015/2016
