--- a/meteor/RealTimeSubtitles/client/templates/accueil/accueil.html
+++ b/meteor/RealTimeSubtitles/client/templates/accueil/accueil.html
@@ -21,7 +21,9 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>How to use</h1>
-              <p>CGDFG SGSE Fswdfsdgesj dklsjf kkqscjndnckqjslf poqkfo kdkcl kdjkljfdsjlf jds kljflkdsjkfjd skjvkjjdn vjnfkv jsdkljfkd skfkldskf dskjfd slkfkd vdskjvdks vdsokfodsk vdsjoesdfoso dsofpzqfojs fsjfpoqsifpoi sfjqsofop sjfpoqfoq qjfopqsifosi qfsofopqzi qsojfiqs fqsofoqsio qsofjpoqs fqsojf fs fsojf sqfjq fqo</p>
+              <p><h3><li>Log in</li>
+                <li>Add / select a course</li>
+                <li>present or contribute to a course</li></h3></p>
             </div>
           </div>
         </div>
@@ -30,7 +32,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Enjoy</h1>
-              <p>ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl</p>
+              <p></p>
             </div>
           </div>
         </div>
