--- a/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
+++ b/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
@@ -16,20 +16,17 @@
 </template>
 
 <template name="addCourseForm">
-	Select a course to contribute or create a new course
 	<div id="formulaire">
 		{{#if currentUser}}
-<!-- 			<form>
-				<input type="text" class="form-control" name="courseName" placeholder="Type to add new course" id="inputSuccess4" aria-describedby="inputSuccess4Status">
-				<input type="submit" class="btn btn-default" value="Add Course">
-			</form> -->
 			<form class="form-inline">
 			  <div class="form-group has-success has-feedback">
-			    <input type="text" class="form-control" id="inputSuccess4" aria-describedby="inputSuccess4Status" placeholder="Type to add new course" name="courseName">
-			    <span class="glyphicon glyphicon-plus form-control-feedback" aria-hidden="true"></span>
+			    <input type="text" class="form-control" id="inputSuccess4" aria-describedby="inputSuccess4Status" placeholder="Course Name" name="courseName">
 			    <span id="inputSuccess4Status" class="sr-only">(success)</span>
+			    <span id="helpBlock2" class="help-block">Select or create a new course to contribute</span>
 			  </div>
 			</form>
+		{{else}}
+			<div>Please log in</div>
 		{{/if}}
 	</div>
 </template>
