filling caroussel + fixing login button

--- a/meteor/RealTimeSubtitles/client/templates/accueil/accueil.html
+++ b/meteor/RealTimeSubtitles/client/templates/accueil/accueil.html
@@ -21,7 +21,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>How to use</h1>
-              <p>CGDFG SGSE Fswdfsdgesj dklsjf kkqscjndnckqjslf poqkfo kdkcl kdjkljfdsjlf jds kljflkdsjkfjd skjvkjjdn vjnfkv jsdkljfkd skfkldskf dskjfd slkfkd vdskjvdks vdsokfodsk vdsjoesdfoso dsofpzqfojs fsjfpoqsifpoi sfjqsofop sjfpoqfoq qjfopqsifosi qfsofopqzi qsojfiqs fqsofoqsio qsofjpoqs fqsojf fs fsojf sqfjq fqo</p>
+              <p>You have first to login to use the features of our app. Then when you're logged in you can creat a new course. When you creat a course you can remove it or join it. Other users can only join it. Once you join a course, if you are its creator you can launch GoogleSpeech and start talking while displaying your slides. Else, if you joined the course and you're not its creator you can only follow the slides and correct the notes displayed by Google speech on the right side. To correct the notes you can insert a word, or correct an existing word by adding an option to it. Each word corrected will had a socre, and the correction with the highest score is more likely to be true and will be saved as the last result.</p>
             </div>
           </div>
         </div>
@@ -30,7 +30,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Enjoy</h1>
-              <p>ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl ldfkld skgks klgkl</p>
+              <p>Every human being shoud have the opportunity to receive a quality education.
+                <br><em>Bill First</em></p>
             </div>
           </div>
         </div>
