review of the courseTable design. Now, one page for personal courses, and one for other courses. Adding restriction on the course'name, with a beautiful design!

--- a/meteor/RealTimeSubtitles/client/templates/home/home.html
+++ b/meteor/RealTimeSubtitles/client/templates/home/home.html
@@ -1,5 +1,4 @@
 <template name="home">
-	<h1>Welcome to Live Subtitles !</h1>
-	{{> addCourseForm}}
-	{{> coursesTables}}
+	<span class="help-block">Select a course to contribute</span>
+	{{> coursesTables}}	
  </template>
