--- a/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
+++ b/meteor/RealTimeSubtitles/client/templates/displayCourse/displayCourse.html
@@ -1,32 +1,38 @@
-<template name="coursesTables">
-	{{#each course}}
-		<li class='course'>
-			<b>{{name}}</b> created by {{DisplayAuthor author}} at {{DisplayDate createdAt}}, <small><i>{{listener}} collaborators</i></small> {{slides}}
-			
-			{{#if mouseOnDelete}} 
-				<a id="remove" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-trash"></span> </a>
-			{{/if}}
-			{{#if mouseOnJoin}}
-				{{#if currentUser}}
-					<a href="{{pathFor 'reveal'}}" id="join" class="btn btn-xs btn-primary"> <span class="glyphicon glyphicon-pencil"></span></a>
-				{{/if}}
-			{{/if}}
-		</li>
-	{{/each}}
-</template>
-
 <template name="addCourseForm">
 	<div id="formulaire">
-		{{#if currentUser}}
 			<form class="form-inline">
-			  <div class="form-group has-success has-feedback">
-			    <input type="text" class="form-control" id="inputSuccess4" aria-describedby="inputSuccess4Status" placeholder="Course Name" name="courseName">
-			    <span id="inputSuccess4Status" class="sr-only">(success)</span>
-			    <span id="helpBlock2" class="help-block">Select or create a new course to contribute</span>
-			  </div>
+				<div class="form-group {{succWarnDangStyle}} has-feedback">
+					<input type="text" class="form-control" placeholder="Course Name" name="courseName">
+					<span class="glyphicon {{succWarnDangIcone}} form-control-feedback" aria-hidden="true"></span>
+					<!-- <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span> -->
+				</div>
+				<span id="helpBlock2" class="help-block">{{succWarnDangText}}</span>
 			</form>
-		{{else}}
-			<div>Please log in</div>
-		{{/if}}
+
 	</div>
+</template>
+
+
+<template name="myCoursesTables">
+	{{> reactiveTable settings=settings}}
+</template>
+
+<template name="coursesTables">
+	{{> reactiveTable settings=settings}}
+</template>
+
+<template name="noCourse">
+	<h3> Pleaz add a course </h3>
+</template>
+
+
+<template name="actionCourse">
+	{{#if mouseOnDelete}} 
+		<a id="remove" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-trash"></span> </a>
+	{{/if}}
+	{{#if mouseOnJoin}}
+		{{#if currentUser}}
+			<a href="{{pathFor 'reveal'}}" id="join" class="btn btn-xs btn-primary"> <span class="glyphicon glyphicon-pencil"></span></a>
+		{{/if}}
+	{{/if}}
 </template>
