--- a/meteor/RealTimeSubtitles/client/templates/header/header.html
+++ b/meteor/RealTimeSubtitles/client/templates/header/header.html
@@ -12,8 +12,9 @@
 				</div>
 				<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="{{pathFor 'home'}}">Cours</a></li>
+					<li><a href="{{pathFor 'home'}}">Contribute</a></li>
 					{{#if currentUser}}
+						<li><a href="{{pathFor 'myCourse'}}">My Course</a></li>
 						{{#if isJoined}}
 							{{#if isTeacher}}
 								<li>{{> APISpeech}}</li>
@@ -23,8 +24,8 @@
 							<li><a href="{{pathFor 'indev'}}">In Development</a></li>
 						{{/if}}
 					{{/if}}
-					<li><a href="{{pathFor 'about'}}">About</a></li>
 					<li>{{> loginButtons}}</li>
+					<li><a href="{{pathFor 'about'}}">About</a></li>
 				</ul>
 			  </div><!--/.nav-collapse -->
 			</div>
