file upload. Display file in reveal section. See reveal.html for more informations

--- a/meteor/RealTimeSubtitles/client/views/slides/cours1.html
+++ b/meteor/RealTimeSubtitles/client/views/slides/cours1.html
@@ -1,6 +1,6 @@
 <template name="cours">
 				<section>
-					<h3>HTML Presentations Made Easy</h3>
+					<h3>HTML Presentations Made Easy Flex</h3>
 					<p>
 						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
 					</p>
